<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/testConnectionButton"
        android:text="@string/test_connection"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userInfoButton"
        android:text="@string/get_user_info"
        android:layout_below="@+id/testConnectionButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logoutButton"
        android:text="@string/logout"
        android:layout_below="@+id/userInfoButton"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/logoutButton"
        android:id="@+id/clearTagButton"
        android:text="@string/clear_tagid"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clearTagButton"
        android:text="@string/dungeon_master"
        android:id="@+id/iAmBossOfTheGym"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:layout_gravity="bottom"
            android:id="@+id/goBackSettingsScreen"/>

    </LinearLayout>

</RelativeLayout>