<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/setTagName"
        android:hint="@string/set_tag_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/setTagNameButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_up_tag" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_back"
            android:layout_gravity="bottom"
            android:id="@+id/goBackAddNewTag"/>

    </LinearLayout>
</LinearLayout>