<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="30dp"
        tools:ignore="MissingConstraints"
        android:layout_below="@id/textViewUserName"/>

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/textViewUserName"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available_tags"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="57dp"
        android:layout_below="@id/user_name"/>

    <TextView
        android:id="@+id/available_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:text=""
        tools:layout_editor_absoluteY="84dp" />

    <RelativeLayout
        android:id="@+id/relativeLayoutInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/goBackButtonUserInf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/available_tags"
            tools:ignore="NotSibling"
            android:text="@string/go_back"/>

    </RelativeLayout>
</RelativeLayout>